--- a/1.CORE/4. STRING MANIPULATION/Untitled.ipynb
+++ b/1.CORE/4. STRING MANIPULATION/Untitled.ipynb
@@ -318,11 +318,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "8645d989",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the nos you required in output:3324,545,56,3\n",
+      "[3324, 545, 56, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "res=[int(x) for x in input(\"Enter the nos you required in output:\").split(\",\")]\n",
+    "print(res)"
+   ]
   }
  ],
  "metadata": {
